Fix event overlay on small screens

--- a/packages/Events/components/EventCard/eventCard.module.css
+++ b/packages/Events/components/EventCard/eventCard.module.css
@@ -49,30 +49,6 @@ p {
     gap: 20px;
 }
 
-.eventsContainer::before {
-    content:'';
-    display:block;
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    box-shadow: inset -30px 0 10px 0 rgb(254 221 110);
-    pointer-events: none;
-}
-
-.eventsContainer::after {
-    content:'';
-    display:block;
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    box-shadow: inset 30px 0 10px 0 rgb(254 221 110);
-    pointer-events: none;
-}
-
 .eventCard {
     display: flex;
     flex-direction: column;
@@ -173,6 +149,30 @@ p {
         padding-bottom: 20px !important;
     }
 
+    .eventsContainer::before {
+        content:'';
+        display:block;
+        position:absolute;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        pointer-events: none;
+        box-shadow: inset -10px 0 10px 0 rgb(254 221 110);
+    }
+
+    .eventsContainer::after {
+        content:'';
+        display:block;
+        position:absolute;
+        top:0;
+        left:0;
+        width:100%;
+        height:100%;
+        pointer-events: none;
+        box-shadow: inset 10px 0 10px 0 rgb(254 221 110);
+    }
+
     .eventCard {
         min-width: 400px;
         width: 400px;
@@ -200,6 +200,14 @@ p {
 
     .eventsContainer {
         gap: 30px;
+    }
+
+    .eventsContainer::before {
+        box-shadow: inset -30px 0 10px 0 rgb(254 221 110);
+    }
+
+    .eventsContainer::after {
+        box-shadow: inset 30px 0 10px 0 rgb(254 221 110);
     }
 }
 
